# BankVaani

./: README.md
livekit-backend/: .env.example  agent.py  bank_api.py  prompt.py  pyproject.toml  tools.py
nextjs-frontend/: .env.example  app-config.ts  package.json  pnpm-lock.yaml
nextjs-frontend/app/: page.tsx
nextjs-frontend/app/api/auth/login/: route.ts
nextjs-frontend/app/api/auth/logout/: route.ts
nextjs-frontend/app/api/auth/signup/: route.ts
nextjs-frontend/app/api/connection-details/: route.ts
nextjs-frontend/app/call/: layout.tsx
nextjs-frontend/app/login/: page.tsx
nextjs-frontend/app/signup/: page.tsx
nextjs-frontend/app/ui/: layout.tsx
nextjs-frontend/components/app/: app.tsx  logout-button.tsx  session-view.tsx  view-controller.tsx  welcome-card.tsx  welcome-view.tsx
nextjs-frontend/components/livekit/agent-control-bar/: agent-control-bar.tsx
nextjs-frontend/hooks/: useAgentErrors.tsx  useAuthUser.ts  useConnection.tsx
nextjs-frontend/lib/: mongo.ts
